--- a/3_stateoftheart/stateofart.tex
+++ b/3_stateoftheart/stateofart.tex
@@ -275,5 +275,7 @@ While most explainability approaches focus on explaining neural network predicti
 As pointed by Bianchi et al., explainability of knowledge graph embedding models remains a challenge. While the inference process of some specific models can be explained using rules, other approaches such as GNNExplainer \citep{ying_2019_gnnexplainer} and CRIAGE \citep{pezeshkpour_2019_investigating} base the explanation on the detection of the top influential elements on the prediction. 
 
 \section{Conclusions of the State-of-the-Art}
-This chapter first aims to summarize the AI spectrum. Due to the complexity of this task, there is not a unique taxonomy, but several categorizations that stem from different perspectives. One of the simplest categorizations divides the spectrum into two complimentary kinds: symbolic and subsymbolic. This division of the
+This chapter first aims to summarize the AI spectrum. Due to the complexity of this task, there is not a unique taxonomy, but several categorizations that stem from different perspectives. One of the simplest categorizations divides the spectrum into two complimentary kinds: symbolic and subsymbolic. This spectrum was further expanded to include an in-between ground: statistical models. A different categorization divides the AI spectrum between knowledge-based and computationally intelligent systems. However, this categorization does not consider deep learning approaches due to their novelty. An integration of both taxonomies including deep learning is presented in this Section, which is used throughout the rest of the document.
 
+Neurosymbolic models are also studied in this Section, providing an overview on the different categorizations and design patterns. An insight on the motivation of these approaches is also provided, studying the benefits of combining symbolic and subsymbolic models under a unified framework. Besides the study on the classification of neurosymbolic systems, several approaches presenting different design criteria are also reviewed and presented. These works are then framed in the context of this thesis, which considers neurosymbolic models from two standpoints: integration and extraction. A summarization of existing approaches for both categories is provided. 
+\elvitodo{No sé si es buena idea o no, de cara a la legibilidad, añadir aquí las limitaciones. Por coherencia y por separar el contenido original del propio, quizás sea mejor añadirlo como una sección al inicio del próximo capítulo}
