--- a/4_objectives/objectives.tex
+++ b/4_objectives/objectives.tex
@@ -3,4 +3,8 @@
 
 %Se consdera poco la integracion de subsimbolico a simbolico como razonamiento y no como modelo. 
 
-% Siempre suele ser entre reglas-redes de neuronas. No considera las limitaciones existentes que se tienen que cumplir para que la integración sea correcta
+% Siempre suele ser entre reglas-redes de neuronas. No considera las limitaciones existentes que se tienen que cumplir para que la integración sea correcta. 
+
+%%RESTRICCIONES
+
+%No consideramos modelos unificados donde ambos tienen la misma importancia, sino hibridos (revisar notación para que sea coherente), de manera que existe un modelo maestro y un modelo 'slave'. No se puede usar esta terminologia ya porque es un poco reicist. 
